--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_user.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_user.scss
@@ -4,7 +4,8 @@
 .path-user {
   // Orders.
   .field--type-email,
-  .field--name-shipping-method {
+  .field--name-shipping-method,
+  .field--name-placed {
     padding-bottom: 20px;
   }
 
