--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -538,6 +538,21 @@
       }
     }
 
+    .field--name-quantity {
+      input {
+        position: relative;
+        max-width: 75px;
+        height: 40px;
+        margin-left: 5px;
+        border-radius: 0;
+        border: 1px solid #ccc;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        text-align: center;
+      }
+    }
+
     .form-actions {
       margin-top: 35px;
 
