--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -96,8 +96,8 @@
 
         <div class="col-xs-12 col-sm-2 text-right">
           {# Button trigger modal #}
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#siteTours">
-            Tours
+          <button type="button" id="siteTours-start" class="btn btn-primary" data-toggle="modal" data-target="#siteTours">
+            <i class="fa fa-star fa-lg"></i> {{ 'Guided Tours'|t }}
           </button>
         </div>
       </div>
@@ -112,14 +112,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="siteToursLabel">Drupal Commerce Tours</h4>
+        <h4 class="modal-title" id="siteToursLabel"><i class="fa fa-star fa-lg"></i> {{ 'Drupal Commerce Tours'|t }}</h4>
       </div>
       <div class="modal-body">
-        <p>Select a Drupal Commerce site tour below!</p>
-        <button type="button" class="btn btn-primary" id="productPageTour">Product Page</button>
+        <p>{{ 'Select a guided Drupal Commerce feature tour below!'|t }}</p>
+
+        <button type="button" class="btn btn-primary" id="homepageTour">
+          <i class="fa fa-home fa-lg"></i> {{ 'Homepage Features'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="productPageTour">
+          <i class="fa fa-gift fa-lg"></i> {{ 'Product Page'|t }}
+        </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'close'|t }}</button>
       </div>
     </div>
   </div>
