--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -112,10 +112,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="siteToursLabel"><i class="fa fa-star fa-lg"></i> {{ 'Drupal Commerce Tours'|t }}</h4>
+        <h4 class="modal-title" id="siteToursLabel"><i class="fa fa-star fa-lg"></i> {{ 'Guided Tours'|t }}</h4>
       </div>
       <div class="modal-body">
-        <p>{{ 'Select a guided Drupal Commerce feature tour below!'|t }}</p>
+        <p>{{ 'Select a Drupal Commerce guided feature tour below!'|t }}</p>
 
         <button type="button" class="btn btn-primary" id="homepageTour">
           <i class="fa fa-home fa-lg"></i> {{ 'Homepage Features'|t }}
@@ -123,6 +123,38 @@
 
         <button type="button" class="btn btn-primary" id="productPageTour">
           <i class="fa fa-gift fa-lg"></i> {{ 'Product Page'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="productCatalogTour">
+          <i class="fa fa-th-large fa-lg"></i> {{ 'Catalog & Filters'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="solrSearchTour">
+          <i class="fa fa-search fa-lg"></i> {{ 'SOLR Search'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="quickCartTour">
+          <i class="fa fa-shopping-basket fa-lg"></i> {{ 'Quick Cart'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="checkoutPhysicalTour">
+          <i class="fa fa-shopping-cart fa-lg"></i> {{ 'Checkout - Physical'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="checkoutDigitalTour">
+          <i class="fa fa-cart-arrow-down fa-lg"></i> {{ 'Checkout - Digital'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="customerAccountTour">
+          <i class="fa fa-address-book fa-lg"></i> {{ 'Customer Account'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="customerAccountTour">
+          <i class="fa fa-drupal fa-lg"></i> {{ 'Why Drupal?'|t }}
+        </button>
+
+        <button type="button" class="btn btn-primary" id="customerAccountTour">
+          <i class="fa fa-code fa-lg"></i> {{ 'Why Open Source?'|t }}
         </button>
       </div>
       <div class="modal-footer">
