Add additional tours - Why Drupal? and Why Open Source?

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -149,11 +149,11 @@
           <i class="fa fa-address-book fa-lg"></i> {{ 'Customer Account'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary" id="customerAccountTour">
+        <button type="button" class="btn btn-primary" id="whyDrupalTour">
           <i class="fa fa-drupal fa-lg"></i> {{ 'Why Drupal?'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary" id="customerAccountTour">
+        <button type="button" class="btn btn-primary" id="whyOpenSourceTour">
           <i class="fa fa-code fa-lg"></i> {{ 'Why Open Source?'|t }}
         </button>
       </div>
