Add additional tour - Catalog and Filters.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -437,7 +437,7 @@ form.newsletter-signup-form {
  * Side column facets.
  */
 .block-facets {
-  padding-bottom: 5px;
+  padding: 10px 10px 10px 15px;
 
   ul {
     padding: 0;
