--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -125,7 +125,7 @@
           <i class="fa fa-gift fa-lg"></i> {{ 'Product Page'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary" id="productCatalogTour">
+        <button type="button" class="btn btn-primary" id="catalogFiltersTour">
           <i class="fa fa-th-large fa-lg"></i> {{ 'Catalog & Filters'|t }}
         </button>
 
