--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -68,6 +68,7 @@
     position: absolute;
     top: -77px;
     font-size: 14px;
+    z-index: 9999999; // z-index only needed for JS site tour.
 
     @media (max-width: $screen-sm-max) {
       position: relative;
