Add additional tour - Quick Cart.

--- a/web/themes/custom/commerce_2_demo/css/tours.css
+++ b/web/themes/custom/commerce_2_demo/css/tours.css
@@ -2,6 +2,17 @@
  * Custom site tours.
  */
 
+.site-tours-wrapper {
+  text-align: right;
+}
+
+@media (max-width: 991px) {
+  .site-tours-wrapper {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+
 #siteTours-start i,
 #siteTours i {
   margin-right: 6px;
