--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
@@ -529,8 +529,11 @@
  * Site header search.
  */
 .site-header__search {
-  display: inline-block;
   margin: 13px 0;
+
+  .region-site-search {
+    display: inline-block;
+  }
 
   .form--inline {
     .form-item-filter {
