Add additional tours - Physical & Digital Products - Still some TO DOs left to complete.

--- a/web/themes/custom/commerce_2_demo/css/tours.css
+++ b/web/themes/custom/commerce_2_demo/css/tours.css
@@ -36,6 +36,11 @@
   text-align: left;
 }
 
+#siteTours .modal-body button.disabled {
+  background-color: #aaa;
+  border: none;
+}
+
 /* Intro.js overrides */
 
 .introjs-overlay {
