Add tour libraries separate from global. Includes js.cookie.js library for cookies.

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -137,15 +137,15 @@
           <i class="fa fa-shopping-basket fa-lg"></i> {{ 'Quick Cart'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary disabled" id="checkoutPhysicalTour">
+        <button type="button" class="btn btn-primary" id="checkoutPhysicalTour">
           <i class="fa fa-shopping-cart fa-lg"></i> {{ 'Checkout - Physical'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary disabled" id="checkoutDigitalTour">
+        <button type="button" class="btn btn-primary" id="checkoutDigitalTour">
           <i class="fa fa-cart-arrow-down fa-lg"></i> {{ 'Checkout - Digital'|t }}
         </button>
 
-        <button type="button" class="btn btn-primary disabled" id="customerAccountTour">
+        <button type="button" class="btn btn-primary" id="customerAccountTour">
           <i class="fa fa-address-book fa-lg"></i> {{ 'Customer Account'|t }}
         </button>
 
