--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -80,6 +80,9 @@
     <a href="#main-content" class="visually-hidden focusable skip-link">
       {{ 'Skip to main content'|t }}
     </a>
+    <button type="button" id="siteTours-start" class="btn btn-primary fixed-button" data-toggle="modal" data-target="#siteTours">
+      <i class="fa fa-star fa-lg"></i> {{ 'Guided Tours'|t }}
+    </button>
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
