Add Hotjar tracking code.

--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -58,7 +58,19 @@
     {# SharThis #}
     <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=591c6fb6c3c43c0017f5dfe0&product=inline-share-buttons"></script>
 
-    {# Start of Zendesk Live Chat Script #}
+    {# Hotjar Tracking Code for https://commercedemo.acromedia.com #}
+    <script>
+      (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:630318,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
+      {# Start of Zendesk Live Chat Script #}
     <script type="text/javascript">
       window.$zopim||(function(d,s){var z=$zopim=function(c){
         z._.push(c)},$=z.s=
