Stops first visit tour modal popup for mobile. Some minor tour spelling corrections.

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -188,7 +188,7 @@
           {% endtrans %}
         </div>
 
-        <button type="button" id="footerCloseTours" class="btn btn-default" data-dismiss="modal">{{ 'close'|t }}</button>
+        <button type="button" id="footerCloseTours" class="btn btn-default" data-dismiss="modal">{{ 'Close'|t }}</button>
       </div>
     </div>
   </div>
