Minor styling updates/fixes.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_blog.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_blog.scss
@@ -3,6 +3,9 @@
  */
 
 // Node.
+.blog-content #block-commerce-2-demo-mainpagecontent {
+  padding-bottom: 0;
+}
 .page-title--blog-post {
   margin: 0 0 10px 0;
   padding: 0;
