Adds slide-down mobile sidebar, currently used for product filters.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -483,6 +483,7 @@ form.newsletter-signup-form {
   display: block;
   position: relative;
   bottom: 12px;
+  max-width: 200px;
   padding: 2px 7px;
   margin-bottom: 12px;
   background-color: transparent;
