Removes SOLR specific wording from tours to make them more generic.

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -134,7 +134,7 @@
         </button>
 
         <button type="button" class="btn btn-primary" id="solrSearchTour">
-          <i class="fa fa-search fa-lg"></i> {{ 'SOLR Search'|t }}
+          <i class="fa fa-search fa-lg"></i> {{ 'Faceted Search'|t }}
         </button>
 
         <button type="button" class="btn btn-primary" id="quickCartTour">
