--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_footer.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_footer.scss
@@ -198,6 +198,36 @@
 }
 
 /**
+ * GitHub.
+ */
+.github {
+  margin-top: 8px;
+
+  @media (max-width: $screen-sm-max) {
+    margin-top: 25px;
+    margin-bottom: 15px;
+  }
+
+  .fa-github {
+    display: inline-block;
+    position: relative;
+    top: 9px;
+    margin-right: 5px;
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 5px 12px;
+    margin: 5px 0 0 2px;
+    font-size: 14px;
+
+    i {
+      margin-left: 3px;
+    }
+  }
+}
+
+/**
  * Sticky footer.
  */
 html {
